--- a/template/Ingos.Api.Template/src/01_Infrastructure/Ingos.Infrastructure/Ingos.Infrastructure.csproj
+++ b/template/Ingos.Api.Template/src/01_Infrastructure/Ingos.Infrastructure/Ingos.Infrastructure.csproj
@@ -1,7 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\02_Domain\Ingos.Domain\Ingos.Domain.csproj" />
+    <ProjectReference Include="..\Core\Ingos.Infrastructure.Core\Ingos.Infrastructure.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="EntityConfigurations\" />
+    <Folder Include="Repositories\" />
+  </ItemGroup>
 
 </Project>
