--- a/template/Ingos.Api.Template/src/Ingos.Api/appsettings.json
+++ b/template/Ingos.Api.Template/src/Ingos.Api/appsettings.json
@@ -1,7 +1,12 @@
 {
+  "ConnectionStrings": {
+    "IngosApplication": "server=127.0.0.1;database=ingos;user=root;password=123456@sql;port=3306;persistsecurityinfo=True;sslmode=none"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*"
