--- a/template/Ingos.Api.Template/src/01_Infrastructure/Core/Ingos.AspNetCore.Api.Core/Ingos.Api.Core.csproj
+++ b/template/Ingos.Api.Template/src/01_Infrastructure/Core/Ingos.AspNetCore.Api.Core/Ingos.Api.Core.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
+  </ItemGroup>
+
 </Project>
