--- a/template/Ingos.Api.Template/src/01_Infrastructure/Shared/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
+++ b/template/Ingos.Api.Template/src/01_Infrastructure/Shared/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
