--- a/template/Ingos.Api.Template/src/Ingos.Api/Ingos.Api.csproj
+++ b/template/Ingos.Api.Template/src/Ingos.Api/Ingos.Api.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\01_Infrastructure\Ingos.Infrastructure\Ingos.Infrastructure.csproj" />
-    <ProjectReference Include="..\01_Infrastructure\Shared\Ingos.AspNetCore.Api.Core\Ingos.Api.Core.csproj" />
+    <ProjectReference Include="..\01_Infrastructure\Shared\Ingos.Api.Core\Ingos.Api.Core.csproj" />
     <ProjectReference Include="..\01_Infrastructure\Shared\Ingos.Infrastructure.Core\Ingos.Infrastructure.Core.csproj" />
     <ProjectReference Include="..\03_Application\Ingos.Application\Ingos.Application.csproj" />
   </ItemGroup>
