--- a/framework/src/infrastructure/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
+++ b/framework/src/infrastructure/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
@@ -11,4 +11,8 @@
     <PackageTags>infrastructure,utils</PackageTags>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.4" />
+  </ItemGroup>
+
 </Project>
