Add class lib about extend ef core with repository and unit of work

--- a/framework/src/domain-driven-design/Ingos.Domain.Abstractions/Ingos.Domain.Abstractions.csproj
+++ b/framework/src/domain-driven-design/Ingos.Domain.Abstractions/Ingos.Domain.Abstractions.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Authors>Danvic Wang</Authors>
     <Product />
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl></PackageProjectUrl>
     <Copyright>Copyright (c) 2020 Danvic Wang</Copyright>
     <PackageTags>domain-driven-design</PackageTags>
