--- a/framework/src/domain-driven-design/Ingos.Domain.Persistence.EntityFrameworkCore/Ingos.Domain.Persistence.EntityFrameworkCore.csproj
+++ b/framework/src/domain-driven-design/Ingos.Domain.Persistence.EntityFrameworkCore/Ingos.Domain.Persistence.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
     <PackageTags>domain-driven-design,entity-framework-core</PackageTags>
     <Description>Persist domain data with ef core</Description>
     <Copyright>Copyright (c) 2020 Danvic Wang</Copyright>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
