Add a utils lib about asp.net core

--- a/framework/src/infrastructure/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
+++ b/framework/src/infrastructure/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
@@ -10,6 +10,8 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>infrastructure,utils</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Version>0.0.1</Version>
+    <Description>Utils for ingos</Description>
   </PropertyGroup>
 
   <ItemGroup>
