--- a/framework/src/infrastructure/Ingos.AspNetCore.Core/Ingos.AspNetCore.Core.csproj
+++ b/framework/src/infrastructure/Ingos.AspNetCore.Core/Ingos.AspNetCore.Core.csproj
@@ -6,7 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Ingos.Infrastructure.Core" Version="0.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.10" />
   </ItemGroup>
 
