Add a web api test project to test web api core class lib and fix some bugs

--- a/framework/test/infrastructure/Ingos.Infrastructure.Core.Tests/Ingos.Infrastructure.Core.Tests.csproj
+++ b/framework/test/infrastructure/Ingos.Infrastructure.Core.Tests/Ingos.Infrastructure.Core.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\infrastructure\Ingos.Infrastructure.Core\Ingos.Infrastructure.Core.csproj" />
+    <ProjectReference Include="..\..\..\src\infrastructure\Ingos.Infrastructure.Core\Ingos.Infrastructure.Core.csproj" />
   </ItemGroup>
 
 </Project>
