Update packaging settings

--- a/src/domain-driven-design/Ingos.Domain.Abstractions/Ingos.Domain.Abstractions.csproj
+++ b/src/domain-driven-design/Ingos.Domain.Abstractions/Ingos.Domain.Abstractions.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Authors>Danvic Wang</Authors>
     <Product />
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageProjectUrl></PackageProjectUrl>
     <Copyright>Copyright (c) 2020 Danvic Wang</Copyright>
     <PackageTags>domain-driven-design</PackageTags>
@@ -15,6 +15,7 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageLicenseFile></PackageLicenseFile>
     <NeutralLanguage></NeutralLanguage>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
