--- a/src/infrastructure/Ingos.AspNetCore.Core/Ingos.AspNetCore.Core.csproj
+++ b/src/infrastructure/Ingos.AspNetCore.Core/Ingos.AspNetCore.Core.csproj
@@ -6,14 +6,15 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <Company>Danvic Wang</Company>
     <Authors>Danvic Wang</Authors>
-    <Version>0.1.1</Version>
+    <Version>0.1.2</Version>
     <Copyright>Copyright (c) 2020 Danvic Wang</Copyright>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Lanesra712/ingos-architecture</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>asp-net-core,middleware</PackageTags>
     <Description>A utils for extend ASP.NET Core applications</Description>
-    <PackageReleaseNotes>Fix the wrong loading order of middleware</PackageReleaseNotes>
+    <PackageReleaseNotes>Fix wrong file header</PackageReleaseNotes>
+    <PackageIcon>logo.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,6 +29,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.6.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\resource\images\logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
