EFCore repository refactor

--- a/src/infrastructure/Ingos.EntityFrameworkCore.Repository/Ingos.EntityFrameworkCore.Repository.csproj
+++ b/src/infrastructure/Ingos.EntityFrameworkCore.Repository/Ingos.EntityFrameworkCore.Repository.csproj
@@ -13,9 +13,17 @@
     <Description>Extend EF Core to implement repository mode and unit work mode</Description>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageIcon>logo.png</PackageIcon>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\resource\images\logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
