--- a/src/infrastructure/Ingos.EntityFrameworkCore.Repository/Ingos.EntityFrameworkCore.Repository.csproj
+++ b/src/infrastructure/Ingos.EntityFrameworkCore.Repository/Ingos.EntityFrameworkCore.Repository.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="3.1.10" />
   </ItemGroup>
 
   <ItemGroup>
