--- a/src/infrastructure/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
+++ b/src/infrastructure/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
@@ -16,7 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.4" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.10" />
+    <PackageReference Include="Scrutor" Version="3.3.0" />
   </ItemGroup>
 
 </Project>
