--- a/src/infrastructure/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
+++ b/src/infrastructure/Ingos.Infrastructure.Core/Ingos.Infrastructure.Core.csproj
@@ -10,14 +10,23 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>infrastructure,utils</PackageTags>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>0.0.1</Version>
+    <Version>0.1.0</Version>
     <Description>Utils for ingos</Description>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <PackageIcon>logo.png</PackageIcon>
+    <PackageReleaseNotes>Adjust custom service dependency injection implementation</PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.10" />
     <PackageReference Include="Scrutor" Version="3.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\resource\images\logo.png">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
